Day2 task completed

--- a/Frontend_Part/Login/consumerLogin.css
+++ b/Frontend_Part/Login/consumerLogin.css
@@ -100,6 +100,12 @@ body{
     font-size: 20px;
   }
 
+  .menu div form select{
+    width: 100%;
+    padding: 15px;
+    font-size: 20px;
+  }
+
   .menu div form label{
     color: var(--extra-color1);
     margin-top: 15px;
@@ -118,3 +124,34 @@ body{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
 
+  .menu div a{ 
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 15rem;
+    height: 4rem;
+    margin-bottom: 3rem;
+    margin-top: 3.5rem;
+    border-radius: 4rem;
+  }
+
+  .menu div button{ 
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    font-size: 22px;
+    display: inline-block;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 .4rem var(--main-color);
+    color: var(--extra-color1);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+  }
+
+  .menu div button:hover{
+    box-shadow: none;
+    cursor: pointer;
+  }
