--- a/Frontend_Part/RoleOfUsers/ActionsOfAdmin/addDepartment.css
+++ b/Frontend_Part/RoleOfUsers/ActionsOfAdmin/addDepartment.css
@@ -100,12 +100,6 @@ body{
     font-size: 20px;
   }
 
-  .menu div form select{
-    width: 100%;
-    padding: 15px;
-    font-size: 20px;
-  }
-
   .menu div form label{
     color: var(--extra-color1);
     margin-top: 15px;
@@ -130,17 +124,16 @@ body{
     justify-content: center;
     align-items: center;
     width: 15rem;
-    height: 4rem;
-    margin-bottom: 3rem;
+    height: 3.8rem;
+    margin-bottom: 4rem;
     margin-top: 3.5rem;
-    border-radius: 4rem;
   }
 
   .menu div button{ 
     margin: auto;
-    width: 100%;
-    height: 100%;
-    font-size: 22px;
+    width: 15rem;
+    height: 3.8rem;
+    font-size: 25px;
     display: inline-block;
     background: var(--main-color);
     border-radius: 4rem;
@@ -148,11 +141,19 @@ body{
     color: var(--extra-color1);
     letter-spacing: .1rem;
     font-weight: 600;
-    transition: .5s ease;
+    transition: .4s ease;
   }
 
-  .menu div button:hover{
+  .menu div a button:hover{
     box-shadow: none;
     cursor: pointer;
   }
 
+
+  
+
+
+
+
+
+  
