--- a/Frontend_Part/RoleOfUsers/operatorRole.css
+++ b/Frontend_Part/RoleOfUsers/operatorRole.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+
 *{
   margin: 0;
   padding: 0;
@@ -87,72 +88,64 @@ body{
     color: var(--extra-color1);
   }
 
-  .menu div form{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-  }
-
-  .menu div form input,label{
-    width: 25rem;
-    padding: 15px;
-    font-size: 20px;
-  }
-
-  .menu div form select{
-    width: 100%;
-    padding: 15px;
-    font-size: 20px;
-  }
-
-  .menu div form label{
-    color: var(--extra-color1);
-    margin-top: 15px;
-  }
-
-  .menu div form label span{
-    color: red;
-  }
-
-  .menu div form input{
-    border-radius: 5px;
-    transition: .5s ease;
-  }
-
-  .menu div form input:hover{
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  }
-
   .menu div a{ 
-    margin: auto;
+    display: block;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 15rem;
-    height: 4rem;
-    margin-bottom: 3rem;
-    margin-top: 3.5rem;
-    border-radius: 4rem;
+    width: 30rem;
+    height: 3.8rem;
+    margin-bottom: 4rem;
+    margin-top: 2.5rem;
   }
 
   .menu div button{ 
     margin: auto;
-    width: 100%;
-    height: 100%;
-    font-size: 22px;
+    width: 30rem;
+    height: 3.8rem;
+    font-size: 25px;
     display: inline-block;
     background: var(--main-color);
-    border-radius: 4rem;
+    border-radius: .5rem;
     box-shadow: 0 0 .4rem var(--main-color);
     color: var(--extra-color1);
     letter-spacing: .1rem;
     font-weight: 600;
-    transition: .5s ease;
+    transition: .4s ease;
+  }
+
+  .menu div a button:hover{
+    box-shadow: none;
+    border: 1px solid black;
+    cursor: pointer;
+  }
+
+
+  
+
+
+
+
+
+
+  /* .menu div button{
+    width: 15rem;
+   
+    margin-top: 40px;
+    padding: 20px;
+    font-size: 20px;
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 .5rem var(--main-color);
+    color: var(--extra-color1);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .4s ease;
   }
 
   .menu div button:hover{
     box-shadow: none;
     cursor: pointer;
-  }
-
+  } */
