--- a/Frontend_Part/RoleOfUsers/ActionsOfAdmin/addDepartment.css
+++ b/Frontend_Part/RoleOfUsers/ActionsOfAdmin/addDepartment.css
@@ -149,7 +149,30 @@ body{
     cursor: pointer;
   }
 
+  #resultant_data{
+    background: white;
+    width: auto;
+    height: auto;
+    margin: auto;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+  }
 
+  #resultant_data div{
+     margin: 40px;
+     color: #000000;
+     text-align: center;
+     font-size: 25px;
+  }
+
+  #resultant_data h1{
+    color: black;
+    margin: auto;
+    margin-top: 20px;
+    font-size: 40px;
+  }
   
 
 
